# de_project

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  data_ingest.ipynb  data_ingest.py  docker-compose.yml  entrypoint.sh  pyproject.toml
.dbt/: .user.yml  profiles.yml
airflow/dags/: daily_data_ingesting.py  daily_dwh_update.py  test_postgres_dag.py
app/: data_ingest.py
breast_cancer/: dbt_project.yml
breast_cancer/macros/: generate_uuid.sql
breast_cancer/models/core/: alive_t_stage_distrib.sql  processed_data.sql  schema.yml
scripts/: entrypoint.sh
superset_init/: create_db.py
